crates/toml_edit/tests/snapshots/invalid/encoding/bom-not-at-start-03.stderr
TOML parse error at line 1, column 4
  |
1 | ﻿﻿a=1
  |    ^^^
invalid unquoted key, expected letters, numbers, `-`, `_`
